--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^10.4.1",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
